# copilot-devops-assistant

./: .env.example  .gitignore  CopilotMCP.sln  README.md  docker-compose.yml
.copilot/: README.md  mcp-prompts.md  mcp-simple.json  mcp.json  prompt-templates.md
.github/workflows/: docker-publish.yml
docs/: Crew-Setup.md  DevOpsMCP-Tools-Reference.md  Docker-Compose-Guide.md  MCP-Inspector.md  TestPlan-Enhancement-Summary.md  TestPlan-Example-ECommerce.md  TestPlan-Gherkin-Parameters.md  TestPlan-Quick-Reference.md
mcp-plugins/AppInsightsMCP/: AppInsightsMCP.csproj  Dockerfile
mcp-plugins/DevopsMCP/: DevopsMCP.csproj  Dockerfile
mcp-plugins/DevopsMCP/Properties/: launchSettings.json
mcp-plugins/appinsights/AppInsightsMCP/: AppInsightsMCP.csproj  Dockerfile
mcp-plugins/appinsights/AppInsightsMCP/Properties/: launchSettings.json
mcp-plugins/devops/DevopsMCP/: DevopsMCP.csproj  Dockerfile
mcp-plugins/devops/DevopsMCP/Properties/: launchSettings.json
prompts/: 1.StudyTestCasesInSuite.md  2.CreateTestCaseInSuite.md  3.CreatePlaywrightTests.md
src/Agents/dev_xp_crew/: README.md  pyproject.toml
src/Agents/dev_xp_crew/src/dev_xp_crew/: crew.py  main.py
src/MCP/AppInsightsMCP/: AppInsightsMCP.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
src/MCP/AppInsightsMCP/Controller/: LogQueryToolController.cs
src/MCP/AppInsightsMCP/Models/: ExecuteQueryRequest.cs  GetEventsRequest.cs  GetMetricRequest.cs  TelemetryRequest.cs
src/MCP/DevopsMCP/: DevopsMCP.csproj  Dockerfile  Program.cs  appsettings.json
(+28 files in other folders)
