[project]
name = "dev_xp_crew"
version = "0.1.0"
description = "Dev-xp-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
dev_xp_crew = "dev_xp_crew.main:run"
run_crew = "dev_xp_crew.main:run"
train = "dev_xp_crew.main:train"
replay = "dev_xp_crew.main:replay"
test = "dev_xp_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
